Fix index banner wrapping on resize

--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ img {
 }
 
 .low-banner a {
+    display: inline-block;
     color: white;
     font-size: medium;
     text-decoration: none;
